--- a/serial/paper9/paper7.tex
+++ b/serial/paper9/paper7.tex
@@ -20,7 +20,7 @@
 % as long as the \iclrfinalcopy macro remains commented out below.
 % Non-anonymous submissions will be rejected without review.
 
-\author{Bui Gia Khanh \thanks{Undergraduate student on Bachelor of Physics track.} \\
+\author{Bui Gia Khanh\\
 Department of Physics\\
 Hanoi University of Science, Vietnam National University\\
 Hanoi, Vietnam\\
